--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.1",
-    "bcryptjs": "^2.4.3",
-    "mongoose": "^8.9.5",
-    "next-auth": "^4.24.11"
+    "sass": "^1.83.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
