เพิ่มฟังก์ชั่นและปรับปรุง ระบบ Login,Register

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb+srv://Admin:Admin@cluster0.kmjt5.mongodb.net/
+# MONGODB_URI=mongodb+srv://Admin:Admin@cluster0.kmjt5.mongodb.net/
+MONGODB_URI=mongodb+srv://Admin91:Admin91@database91.cphhv.mongodb.net/
