--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.1"
+    "resend": "^4.1.2",
+    "sass": "^1.83.1",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
